# Jira-Qualidade

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py  seed.py
backend/app/api/: auth.py  dashboard.py  deps.py  issues.py  jira.py  settings.py  team.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: init_db.py  models.py  session.py
backend/app/jobs/: scheduler.py
backend/app/schemas/: auth.py  issue.py  settings.py  team.py
backend/app/services/: jira_client.py  metrics.py
backend/app/tests/: test_jira_client.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/__tests__/: smoke.test.tsx
frontend/src/components/: Sidebar.tsx  Topbar.tsx
frontend/src/components/dashboard/: ChartCard.tsx  ChartTooltip.tsx  EmptyState.tsx  LoadingSkeleton.tsx  MetricTile.tsx  PersonDetailsPanel.tsx  PersonSelector.tsx  (+2 more)
frontend/src/lib/: api.ts  dashboardMetrics.ts  format.ts  navigation.ts  status.ts  types.ts  uiEvents.ts  usePersistentState.ts
frontend/src/pages/: BoardControl.tsx  Dashboard.tsx  Issues.tsx  Login.tsx  People.tsx  Settings.tsx
frontend/src/styles/: observability-theme.css  premium-dashboard.css  premium-shell.css  tokens.css
nginx/: nginx.conf
scripts/: down.ps1  migrate.ps1  seed.ps1  up.ps1
(+10 files in other folders)
